[Variable Fonts] Make sure table cells are left-aligned

--- a/variable-fonts/styles/var-fonts.css
+++ b/variable-fonts/styles/var-fonts.css
@@ -142,6 +142,7 @@ table:first-child {
 th, td {
 	padding: 10px;
 	padding: .5rem .75rem;
+	text-align: left;
 }
 
 td {
